added vulkan submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,7 @@
 	path = third-party/toml11
 	url = https://github.com/ToruNiina/toml11
 	branch = master
+[submodule "third-party/vulkan"]
+	path = third-party/vulkan
+	url = https://github.com/shadps4/vulkan.git
+	branch = main
