added XXH3_64bits and calculate memory obj hashes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(third-party/magic_enum/include)
 include_directories(third-party/zydis/include/Zydis)
 include_directories(third-party/winpthread/include)
 include_directories(third-party/vulkan/include)
+include_directories(third-party/xxhash/include)
 add_subdirectory("third-party")
 #=================== EXAMPLE ===================
 include_directories(src)
