--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,7 @@
 	path = third-party/vulkan
 	url = https://github.com/shadps4/vulkan.git
 	branch = main
+[submodule "third-party/xxHash"]
+	path = third-party/xxHash
+	url = https://github.com/Cyan4973/xxHash.git
+	branch = dev
