Add auto stubs, static init
- Adds a python script to generate the tables, to avoid std::map init
- Generates stub "slots" to provide runtime information when a stub is called
- Provides fallback for unknown stubs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,9 @@ add_executable(shadps4
     src/Core/virtual_memory.h
     src/Core/PS4/Linker.cpp
     src/Core/PS4/Linker.h
+    src/Core/PS4/Stubs.cpp
+    src/Core/PS4/Stubs.h
+    src/Core/PS4/Util/aerolib.cpp
     src/Lib/Threads.cpp
     src/Lib/Threads.h
     src/Core/PS4/HLE/Kernel/Objects/physical_memory.h
