--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,7 +155,7 @@ create_target_directory_groups(shadps4)
 target_link_libraries(shadps4 PRIVATE magic_enum::magic_enum fmt::fmt spdlog::spdlog toml11::toml11)
 target_link_libraries(shadps4 PRIVATE discord-rpc imgui SDL3-shared vulkan-1 xxhash Zydis)
 if (WIN32)
-    target_link_libraries(shadps4 PRIVATE mincore winpthread)
+    target_link_libraries(shadps4 PRIVATE mincore winpthread ${PROJECT_SOURCE_DIR}/lib/clang_rt.builtins-x86_64.lib)
 endif()
 
 add_custom_command(TARGET shadps4 POST_BUILD
