Modules generation tool (#81)
* Modules generation tool

* apply clang format to generator

* @whereismyfoodat suggestions

* added reuse headers

* reuse part2

* reuse part3

* reuse part3

* replace with hex_id the unknown functions to avoid compile errors with unknown characters from encode_id

* fixes in generation

* some sample module code from autogen tool

* clang format fix

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,6 +40,10 @@
 	path = third-party/xxHash
 	url = https://github.com/Cyan4973/xxHash.git
 	branch = dev
+[submodule "externals/ps4libdoc"]
+	path = externals/ps4libdoc
+	url = https://github.com/idc/ps4libdoc.git
+	branch = 9.00
 [submodule "third-party/vulkan"]
 	path = third-party/vulkan
 	url = https://github.com/GPUCode/vulkan
