--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,15 +128,31 @@ set(HOST_SOURCES src/Emulator/Host/controller.cpp
 )
 
 add_executable(shadps4
+    src/common/assert.cpp
+    src/common/assert.h
+    src/common/bounded_threadsafe_queue.h
+    src/common/concepts.h
     src/common/debug.h
     src/common/disassembler.cpp
     src/common/disassembler.h
     src/common/discord.cpp
     src/common/discord.h
-    src/common/fs_file.cpp
-    src/common/fs_file.h
-    src/common/log.cpp
-    src/common/log.h
+    src/common/error.cpp
+    src/common/error.h
+    src/common/io_file.cpp
+    src/common/io_file.h
+    src/common/path_util.cpp
+    src/common/path_util.h
+    src/common/logging/backend.cpp
+    src/common/logging/backend.h
+    src/common/logging/filter.cpp
+    src/common/logging/filter.h
+    src/common/logging/formatter.h
+    src/common/logging/log_entry.h
+    src/common/logging/log.h
+    src/common/logging/text_formatter.cpp
+    src/common/logging/text_formatter.h
+    src/common/logging/types.h
     src/common/native_clock.cpp
     src/common/native_clock.h
     src/common/rdtsc.cpp
@@ -144,6 +160,8 @@ add_executable(shadps4
     src/common/singleton.h
     src/common/string_util.cpp
     src/common/string_util.h
+    src/common/thread.cpp
+    src/common/thread.h
     src/common/types.h
     src/common/uint128.h
     src/common/version.h
@@ -207,14 +225,18 @@ add_executable(shadps4
     src/core/PS4/GPU/tile_manager.h
     src/core/hle/libraries/libkernel/time_management.cpp
     src/core/hle/libraries/libkernel/time_management.h
- "src/common/io_file.cpp" "src/common/io_file.h")
+    src/core/tls.cpp
+    src/core/tls.h
+)
 
 create_target_directory_groups(shadps4)
 
-target_link_libraries(shadps4 PRIVATE magic_enum::magic_enum fmt::fmt spdlog::spdlog toml11::toml11)
+target_link_libraries(shadps4 PRIVATE magic_enum::magic_enum fmt::fmt toml11::toml11)
 target_link_libraries(shadps4 PRIVATE discord-rpc SDL3-shared vulkan-1 xxhash Zydis)
 if (WIN32)
     target_link_libraries(shadps4 PRIVATE mincore winpthread clang_rt.builtins-x86_64.lib)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_DEPRECATE -D_SCL_SECURE_NO_WARNINGS)
+    add_definitions(-DNOMINMAX -DWIN32_LEAN_AND_MEAN)
 endif()
 
 add_custom_command(TARGET shadps4 POST_BUILD
